--- a/config/databases.yml
+++ b/config/databases.yml
@@ -3,8 +3,8 @@ dev:
     class: sfDoctrineDatabase
     param:
       dsn: 'mysql:host=localhost;dbname=lifemanager'
-      username: root
-      password: root
+      username: lifemanager
+      password: lifemanager
       attributes:
         tblname_format: lm_%s
 prod:
@@ -12,7 +12,7 @@ prod:
     class: sfDoctrineDatabase
     param:
       dsn: 'mysql:host=localhost;dbname=lifemanager'
-      username: root
-      password: root
+      username: lifemanager
+      password: lifemanager
       attributes:
         tblname_format: lm_%s
